Fixed horizontal alignment on online user text

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -250,7 +250,6 @@ input, input.form-control {
         .username {
             transform: translateX(-50%);
             min-width: unset;
-            margin: auto;
 	        left: 50%;
         }
 
